Small CupsPrintersManager refactor.

Pull notifications into a function so that it's harder to have a
bug like crbug/764976 (already fixed in another cl) in which a
notification is given to the wrong set of printers.

Along the way, fix a code path in which notification were generated
too many times -- when the Configured printer set was changed, we
would notify twice (once in UpdateConfiguredPrintersURIs and again
in OnConfiguredPrintersChanged).  This was harmless, but wasteful.

Kudos to Vladislav Kuzkokov for noticing an incorrect line
that led to this change.

Bug: 764976
Change-Id: I68d6c1d1fd90a7756adefbc29aed4004be05da24
Reviewed-on: https://chromium-review.googlesource.com/770092
Reviewed-by: Sean Kau <skau@chromium.org>
Commit-Queue: Justin Carlson <justincarlson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516826}
Former-commit-id: 94f1b555f210e16ee005981f2fa4674db31e6aee